--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "build": "babel src --out-dir lib",
+    "build:watch": "babel src --watch --out-dir lib",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
