--- a/package.json
+++ b/package.json
@@ -28,15 +28,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "babel": "^6.3.26",
-    "babel-cli": "^6.4.0",
-    "babel-core": "^6.4.0",
-    "babel-eslint": "^5.0.0-beta6",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^3.0.2"
+    "madewithlove-webpack-config": "github:madewithlove/webpack-config"
   },
   "dependencies": {
     "deepmerge": "^0.2.10"
