--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "build": "babel src --out-dir lib",
     "build:watch": "babel src --watch --out-dir lib",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
