--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "lodash": "^4.0.0",
     "madewithlove-webpack-config": "github:madewithlove/webpack-config",
     "react": "^0.14.6",
     "webpack": "^1.12.11",
